Bug 886281 - Constrain the absolutely positioned glass fog using overflow-y: hidden to avoid overlapping layers, r=jaws
UltraBlame original commit: f611d07ea260777f8cf6d93a9aac1dad2a0a00ff

--- a/browser/themes/windows/browser-aero.css
+++ b/browser/themes/windows/browser-aero.css
@@ -244,6 +244,11 @@
     z-index: -1;
   }
 
+  
+  #navigator-toolbox:not(:-moz-lwtheme) {
+    overflow-y: hidden;
+  }
+
   #main-window[sizemode=normal] .tabbrowser-arrowscrollbox > .arrowscrollbox-scrollbox > .scrollbox-innerbox:not(:-moz-lwtheme) {
     position: relative;
   }
